Refactor: move layout strings and colors to resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,56 @@
 <resources>
-    <string name="app_name">DriveNextApp</string>
+    <string name="app_name">DriveNext</string>
+    <string name="slogan_1">Поможем найти твою следующую поездку</string>
+    <string name="app_logo">Логотип DriveNext</string>
+    <string name="no_connection">Нет подключения\nк интернету</string>
+    <string name="connection_help">Проверьте подключение и повторите попытку</string>
+    <string name="try_again">Повторить попытку</string>
+    <string name="onboarding_title_1">Аренда автомобилей</string>
+    <string name="onboarding_slogan_1">Открой для себя удобный и доступный способ передвижения</string>
+    <string name="skip">Пропустить</string>
+    <string name="next">Далее</string>
+    <string name="onboarding_content_1">Иллюстрация автомобиля, символизирующая простую и доступную аренду.</string>
+    <string name="onboarding_title_2">Безопасно и удобно</string>
+    <string name="onboarding_slogan_2">Арендуй автомобиль и наслаждайся его удобством</string>
+    <string name="onboarding_content_2">Изображение улыбающегося водителя в автомобиле, отражающее комфорт и безопасность.</string>
+    <string name="onboarding_title_3">Лучшие предложения</string>
+    <string name="onboarding_slogan_3">Выбирай понравившееся среди сотен доступных автомобилей</string>
+    <string name="onboarding_content_3">Иллюстрация с выбором автомобилей.</string>
+    <string name="log_in">Войти</string>
+    <string name="register">Зарегистрироваться</string>
+    <string name="log_in_to_acc">Войдите в аккаунт</string>
+    <string name="enter_details">Пожалуйста, введите свои данные</string>
+    <string name="email">Электронная почта</string>
+    <string name="email_hint">Введите электронную почту</string>
+    <string name="password">Пароль</string>
+    <string name="password_hint">Введите пароль</string>
+    <string name="log_in_google">Войти через Google</string>
+    <string name="forgot_password">Забыли пароль?</string>
+    <string name="back">Назад</string>
+    <string name="create_acc">Создать аккаунт</string>
+    <string name="create_password">Придумайте пароль</string>
+    <string name="repeat_password">Повторите пароль</string>
+    <string name="agreement">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
+    <string name="surname">Фамилия</string>
+    <string name="surname_hint">Введите фамилию</string>
+    <string name="name">Имя</string>
+    <string name="name_hint">Введите имя</string>
+    <string name="patronymic">Отчество</string>
+    <string name="patronymic_hint">Введите отчество</string>
+    <string name="date_of_birth">Дата рождения</string>
+    <string name="date_hint" translatable="false">DD/MM/YYYY</string>
+    <string name="sex">Пол</string>
+    <string name="male">Мужской</string>
+    <string name="female">Женский</string>
+    <string name="acc_photo">Фото профиля</string>
+    <string name="acc_photo_hint">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
+    <string name="driver_license_number">Номер водительского удостоверения</string>
+    <string name="driver_license_number_hint">0000000000</string>
+    <string name="date_of_issue">Дата выдачи</string>
+    <string name="upload_driver_license">Загрузите фото водительского удостоверения</string>
+    <string name="upload_photo">Загрузить фото</string>
+    <string name="upload_passport">Загрузите фото паспорта</string>
+    <string name="enjoy">Пользуйтесь с удовольствием</string>
+    <string name="congratulations">Поздравляем</string>
+    <string name="congratulations_text">Вы успешно зарегистрировались.\nОбработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
 </resources>
