style: adjust colors in layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="enjoy">Пользуйтесь с удовольствием</string>
     <string name="congratulations">Поздравляем</string>
     <string name="congratulations_text">Вы успешно зарегистрировались.\nОбработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
+    <string name="go">Поехали</string>
 </resources>
