--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,16 @@
     <string name="google">Google</string>
     <string name="logout">Выйти из профиля</string>
     <string name="change_password">Поменять пароль</string>
+    <string name="book">Забронировать</string>
+    <string name="details">Детали</string>
+    <string name="per_day">&#032;в день</string>
+    <string name="gearbox">A/T</string>
+    <string name="fuel">Бензин</string>
+    <string name="try_again_help">Не удалось загрузить данные.\nПопробуйте снова.</string>
+    <string name="find_car">Давайте найдём автомобиль</string>
+    <string name="enter_car_brand">Введите марку автомобиля</string>
+    <string name="car_photo">Фото автомобиля</string>
+    <string name="search_result">Результаты поиска</string>
+    <string name="search_for_cars">Ищем подходящие автомобили</string>
 
 </resources>
